<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui"
    android:id="@+id/profile_switch_dialog_view"
    android:orientation="horizontal"
    android:layout_width="304dip"
    android:layout_height="wrap_content"
    android:paddingTop="8dip"
    android:paddingBottom="14dip"
    android:background="@drawable/qs_background_primary"
    >
    <LinearLayout
        android:id="@+id/normal_profile"
        android:orientation="vertical"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:paddingTop="3dip"
        android:layout_height="wrap_content" >
        <ImageView
            android:id="@+id/normal_profile_icon"
            android:layout_width="@dimen/qs_tile_icon_size"
            android:layout_height="@dimen/qs_tile_icon_size"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/freeme_ic_qs_normal_profile_off"
            />
        <TextView 
            android:id="@+id/normal_profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/freeme_normal"
            android:textSize="@dimen/qs_tile_text_size"
            android:layout_marginTop="6dip"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/silent_profile"
        android:orientation="vertical"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:paddingTop="3dip"
        android:layout_height="wrap_content" >
        <ImageView
            android:id="@+id/silent_profile_icon"
            android:layout_width="@dimen/qs_tile_icon_size"
            android:layout_height="@dimen/qs_tile_icon_size"
            android:gravity="center"
            android:layout_gravity="center"
            android:src="@drawable/freeme_ic_qs_silent_profile_off"
            />
        <TextView 
            android:id="@+id/silent_profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/freeme_silent"
            android:textSize="@dimen/qs_tile_text_size"
            android:layout_marginTop="6dip"
            />
    </LinearLayout>
    <LinearLayout
            android:id="@+id/vibrate_profile"
            android:orientation="vertical"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:paddingTop="3dip"
            android:layout_height="wrap_content" >
        <ImageView
            android:id="@+id/vibrate_profile_icon"
            android:layout_width="@dimen/qs_tile_icon_size"
            android:layout_height="@dimen/qs_tile_icon_size"
            android:gravity="center"
            android:layout_gravity="center"
            android:src="@drawable/freeme_ic_qs_vibrate_profile_off"
            />
        <TextView 
            android:id="@+id/vibrate_profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/freeme_vibrate"
            android:textSize="@dimen/qs_tile_text_size"
            android:layout_marginTop="6dip"
            />
    </LinearLayout>
</LinearLayout>
